fix: fixed invisible scrollbar in character scroll gallery

--- a/src/styles/scrollgallery.css
+++ b/src/styles/scrollgallery.css
@@ -9,8 +9,11 @@
 }
 
 .scroll-gallery::-webkit-scrollbar {
-    width: 0;
-    background-color: rgb(107, 177, 107);
+    background-color: rgb(31, 32, 31);
+}
+.scroll-gallery::-webkit-scrollbar-thumb {
+    width: auto;
+    background-color: var(--darkRed);
 }
 
 .character-card{
